# semantix

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  ruff.toml  test.py  try.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: precommit.yaml  release.yaml
docs/: README.md  _sidebar.md  changelog.md  faq.md  index.html  installation.md  methods.md  roadmap.md  tool.md  with-llm.md
docs/api/: llms.md  semantix.md  types.md  utils.md
docs/api-ref/: llms.md
docs/building-blocks/: large-language-model.md  methods.md  semantic-type.md  with-llm.md
docs/guides/: best-practices.md  tutorials.md
docs/quick-start/: installation.md  minimum-example.md
examples/: calorie_estimator.py  grocery_list.py  multilabel_classifier.py  nested.py  object_counter.py  personality_finder.py  personality_finder_vision.py  pii_detector.py  strawberry.py  summarizer.py  synthetic_data_gen.py  talent_acquisition.py
scripts/: gh_release.py
semantix/: __init__.py  decorators.py  inference.py  media.py  types.py  utils.py
semantix/llms/: __init__.py  _anthropic.py  _cohere.py  _google.py  _groq.py  _mistral.py  _openai.py  _together.py  base.py  openai.py
semantix/tools/: __init__.py
semantix/types/: __init__.py  media.py  prompt.py  semantic.py
semantix/utils/: __init__.py  helpers.py
